==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_NUVOTON/TARGET_M2351/serial_api.c <==
#include "serial_api.h"
#include "cmsis.h"
#include "mbed_error.h"
#include "mbed_assert.h"
#include "PeripheralPins.h"
#include "nu_modutil.h"
#include "nu_bitutil.h"
#include <string.h>
#include <stdbool.h>
#include "dma_api.h"
#include "dma.h"

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    // NOTE: With armcc, serial_init() gets called from _sys_open() timing of which is before main()/mbed_sdk_init().
    mbed_sdk_init();

    // Determine which UART_x the pins are used for
    uint32_t uart_tx = pinmap_peripheral(tx, PinMap_UART_TX);
    uint32_t uart_rx = pinmap_peripheral(rx, PinMap_UART_RX);
    // Get the peripheral name (UART_x) from the pins and assign it to the object
    obj->serial.uart = (UARTName) pinmap_merge(uart_tx, uart_rx);
    MBED_ASSERT((int)obj->serial.uart != NC);

    const struct nu_modinit_s *modinit = get_modinit(obj->serial.uart, uart_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->serial.uart);

    struct nu_uart_var *var = (struct nu_uart_var *) modinit->var;

    obj->serial.pin_tx = tx;
    obj->serial.pin_rx = rx;
    obj->serial.pin_rts = NC;
    obj->serial.pin_cts = NC;

    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);

    if (! var->ref_cnt) {
        /* Select IP clock source
         *
         * NOTE: We must call secure version (from non-secure domain) because SYS/CLK regions are secure.
         */
        CLK_SetModuleClock_S(modinit->clkidx, modinit->clksrc, modinit->clkdiv);

        /* Enable IP clock
         *
         * NOTE: We must call secure version (from non-secure domain) because SYS/CLK regions are secure.
         */
        CLK_EnableModuleClock_S(modinit->clkidx);

        /* Reset module
         *
         * NOTE: We must call secure version (from non-secure domain) because SYS/CLK regions are secure.
         */
        SYS_ResetModule_S(modinit->rsetidx);

        // Configure baudrate
        int baudrate = 9600;
        if (obj->serial.uart == STDIO_UART) {
#if MBED_CONF_PLATFORM_STDIO_BAUD_RATE
            baudrate = MBED_CONF_PLATFORM_STDIO_BAUD_RATE;
#endif
        } else {
#if MBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE
            baudrate = MBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE;
#endif            
        }
        serial_baud(obj, baudrate);

        // Configure data bits, parity, and stop bits
        serial_format(obj, 8, ParityNone, 1);
    }
    var->ref_cnt ++;

    obj->serial.vec = var->vec;
    obj->serial.irq_en = 0;

#if DEVICE_SERIAL_ASYNCH
    obj->serial.dma_usage_tx = DMA_USAGE_NEVER;
    obj->serial.dma_usage_rx = DMA_USAGE_NEVER;
    obj->serial.event = 0;
    obj->serial.dma_chn_id_tx = DMA_ERROR_OUT_OF_CHANNELS;
    obj->serial.dma_chn_id_rx = DMA_ERROR_OUT_OF_CHANNELS;
#endif

    /* With support for checking H/W UART initialized or not, we allow serial_init(&stdio_uart)
     * calls in even though H/W UART 'STDIO_UART' has initialized. When serial_init(&stdio_uart)
     * calls in, we only need to set the 'stdio_uart_inited' flag. */
    if (((uintptr_t) obj) == ((uintptr_t) &stdio_uart)) {
        MBED_ASSERT(obj->serial.uart == STDIO_UART);
        stdio_uart_inited = 1;
    }

    if (var->ref_cnt) {
        // Mark this module to be inited.
        int i = modinit - uart_modinit_tab;
        uart_modinit_mask |= 1 << i;
    }
}

void serial_baud(serial_t *obj, int baudrate)
{
    // Flush Tx FIFO. Otherwise, output data may get lost on this change.
    while (! UART_IS_TX_EMPTY((UART_T *) NU_MODBASE(obj->serial.uart)));

    obj->serial.baudrate = baudrate;
    UART_Open((UART_T *) NU_MODBASE(obj->serial.uart), baudrate);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    // Flush Tx FIFO. Otherwise, output data may get lost on this change.
    while (! UART_IS_TX_EMPTY((UART_T *) NU_MODBASE(obj->serial.uart)));

    // Sanity check arguments
    MBED_ASSERT((data_bits == 5) || (data_bits == 6) || (data_bits == 7) || (data_bits == 8));
    MBED_ASSERT((parity == ParityNone) || (parity == ParityOdd) || (parity == ParityEven) || (parity == ParityForced1) || (parity == ParityForced0));
    MBED_ASSERT((stop_bits == 1) || (stop_bits == 2));

    obj->serial.databits = data_bits;
    obj->serial.parity = parity;
    obj->serial.stopbits = stop_bits;

    uint32_t databits_intern = (data_bits == 5) ? UART_WORD_LEN_5 :
                               (data_bits == 6) ? UART_WORD_LEN_6 :
                               (data_bits == 7) ? UART_WORD_LEN_7 :
                               UART_WORD_LEN_8;
    uint32_t parity_intern = (parity == ParityOdd || parity == ParityForced1) ? UART_PARITY_ODD :
                             (parity == ParityEven || parity == ParityForced0) ? UART_PARITY_EVEN :
                             UART_PARITY_NONE;
    uint32_t stopbits_intern = (stop_bits == 2) ? UART_STOP_BIT_2 : UART_STOP_BIT_1;
    UART_SetLineConfig((UART_T *) NU_MODBASE(obj->serial.uart),
                        0,  // Don't change baudrate
                        databits_intern,
                        parity_intern,
                        stopbits_intern);
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    obj->serial.irq_en = enable;
    serial_enable_interrupt(obj, irq, enable);
}

int serial_readable(serial_t *obj)
{
    return ! UART_GET_RX_EMPTY(((UART_T *) NU_MODBASE(obj->serial.uart)));
}

int serial_writable(serial_t *obj)
{
    return ! UART_IS_TX_FULL(((UART_T *) NU_MODBASE(obj->serial.uart)));
}

static void uart_irq(serial_t *obj)
{
    UART_T *uart_base = (UART_T *) NU_MODBASE(obj->serial.uart);

    if (uart_base->INTSTS & (UART_INTSTS_RDAINT_Msk | UART_INTSTS_RXTOINT_Msk)) {
        // Simulate clear of the interrupt flag. Temporarily disable the interrupt here and to be recovered on next read.
        UART_DISABLE_INT(uart_base, (UART_INTEN_RDAIEN_Msk | UART_INTEN_RXTOIEN_Msk));
        if (obj->serial.irq_handler && serial_is_irq_en(obj, RxIrq)) {
            // Call irq_handler() only when RxIrq is enabled
            ((uart_irq_handler) obj->serial.irq_handler)(obj->serial.irq_id, RxIrq);
        }
    }

    if (uart_base->INTSTS & UART_INTSTS_THREINT_Msk) {
        // Simulate clear of the interrupt flag. Temporarily disable the interrupt here and to be recovered on next write.
        UART_DISABLE_INT(uart_base, UART_INTEN_THREIEN_Msk);
        if (obj->serial.irq_handler && serial_is_irq_en(obj, TxIrq)) {
            // Call irq_handler() only when TxIrq is enabled
            ((uart_irq_handler) obj->serial.irq_handler)(obj->serial.irq_id, TxIrq);
        }
    }

    // FIXME: Ignore all other interrupt flags. Clear them. Otherwise, program will get stuck in interrupt.
    uart_base->INTSTS = uart_base->INTSTS;
    uart_base->FIFOSTS = uart_base->FIFOSTS;
}
